Fix miscellaneous build warnings https://bugs.webkit.org/show_bug.cgi?id=198544

Reviewed by Don Olmstead.

Source/JavaScriptCore:

Silence -Wclass-memaccess warning in this dangerous code.

* wasm/WasmInstance.cpp:
(JSC::Wasm::Instance::Instance):

Source/WebCore:

Carefully silence -Wsign-compare warnings.

* contentextensions/DFABytecodeCompiler.cpp:
(WebCore::ContentExtensions::DFABytecodeCompiler::compile):
* inspector/InspectorCanvas.cpp:
(WebCore::InspectorCanvas::indexForData):
* xml/XSLStyleSheetLibxslt.cpp:
(WebCore::XSLStyleSheet::parseString):

Source/WebKit:

Carefully silence -Wsign-compare warnings.

* NetworkProcess/cache/NetworkCacheData.cpp:
(WebKit::NetworkCache::readOrMakeSalt):

Tools:

When converting to PRIVATE include directories, we accidentally dropped SYSTEM here. The
naming convention used here is a bit confusing: the *_SYSTEM_INCLUDE_DIRECTORIES actually
uses both SYSTEM and PRIVATE. We should probably clarify this.

* TestWebKitAPI/PlatformGTK.cmake:


Canonical link: https://commits.webkit.org/212554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246095 268f45cc-cd09-0410-ab3c-d52691b4dbfc