Source/WebCore/contentextensions/DFABytecodeCompiler.cpp
@@ -461,7 +461,7 @@ void DFABytecodeCompiler::compile()
     // Link.
     for (const auto& linkRecord : m_linkRecords) {
         uint32_t destination = m_nodeStartOffsets[linkRecord.destinationNodeIndex];
-        RELEASE_ASSERT(destination < std::numeric_limits<int32_t>::max());
+        RELEASE_ASSERT(destination < static_cast<uint32_t>(std::numeric_limits<int32_t>::max()));
         int32_t distance = destination - linkRecord.instructionLocation;
         ASSERT(abs(distance) <= abs(linkRecord.longestPossibleJump));
         
